--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-instagrapi
-Flask
-Pillow
-requests
+Flask==2.3.3
+pymongo==4.6.3
+python-dotenv==1.0.1
+requests==2.31.0
+selenium==4.21.0
+# Agar Playwright use karega to isko daal
+# playwright==1.44.0
+# Agar FastAPI use karega to isko daal
+# fastapi==0.111.0
+# uvicorn[standard]==0.29.0
