--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 Flask
-instagrapi==2.1.5
+instagrapi==2.1.5      # Exact version, no compromise!
 pymongo
 gunicorn
 Pillow>=8.1.1
+requests==2.32.3       # Instagrapi dependency
+PySocks==1.7.1         # Instagrapi dependency
+pydantic==2.11.5       # Instagrapi dependency
+pydantic-core==2.33.2  # Instagrapi dependency
+pycryptodomex==3.23.0  # Instagrapi dependency
+setuptools>=65.5.1     # Compilation ke liye zaruri ho sakta hai
