--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask
-git+https://github.com/adw0rd/instagrapi.git@main
+git+https://github.com/adw0rd/instagrapi.git@master # 'main' ki jagah 'master' kar, bhenchod!
 pymongo
 gunicorn
 Pillow>=8.1.1
